# bdmpi

./: .gitignore  BUILD.txt  CMakeLists.txt  Changelog  LICENSE.txt  Makefile  README  TODO
apps/bdmp/: CMakeLists.txt  mf1d.c  mf1d2-mpi.c  mf1d2.c  mf2d.c  mf2dmt.c  pr1d.c  pr1dmt.c  pr1drmt.c  samplesort.c  sb_pr1d.c  sb_pr1d.c-orig  sb_sphkmeans.c  sphkmeans.c  sphrbkmeans.c
apps/bdmp-oc/: CMakeLists.txt  mf1d.c  mf2d.c  pr1d-dv.c  pr1d.c  sphkmeans.c
apps/misc/: CMakeLists.txt  lockmem.c  merge.c  vmqsort.c  vmsamplesort.c
apps/mpi/: CMakeLists.txt  mf1d2.c  mf2d.c  mpi_rw.c  pr1d.c  pr2d.c  samplesort.c  sphkmeans.c  sphrbkmeans.c
apps/oc/: CMakeLists.txt  mf2d.c  pr.c  samplesort.c  sphkmeans.c
bdmprun/: CMakeLists.txt  allgather.c  alltoall.c  babel.c  barrier.c  bcast.c  bdmprun.c  bdmprun.h  cmdline.c  comm.c  defs.h  finalize.c  gather.c  init.c  macros.h  memory.c  merge.c  mnode.c  mpi.c  pending.c  probe.c  proto.h  recv.c  reduce.c  scatter.c  send.c  slvpool.c  struct.h
bench/graphcoloring/: CMakeLists.txt  graphcoloring.c  graphcoloring.c.old
bench/graphdiameter/: Doxyfile.in  README.md
bench/graphdiameter/cmake/modules/: FindCheck.cmake
bench/graphdiameter/datasets/: README.md  rnd2.adj
bench/graphdiameter/scripts/: pair2adjacency.py  splitInput.py  timings.py
bench/graphdiameter/src/: CMakeLists.txt  Makefile  boolean.h  check_ptr.h  debug.h  graph.c  graph.h  hll_counter.c  hll_counter.h  hyper_anf_mpi.c  hyper_anf_mpi.h  hyper_anf_serial.c  hyper_anf_serial.h  mpi_hello.c  msgTest.c  null.h  parallel.c  parser.c  parser.h  serial.c  test_hll_counter.c  test_parser.c
bench/scotch/src/: Makefile.inc
common/: CMakeLists.txt  bdlock.c  bdmq.c  bdscb.c  bdsm.c  common.h  datatypes.c  debug.c  memory.c  reduce.c  scan.c  util.c  xfer.c
config/: limits.conf  proc.sys.fs.mqueue  sysctl.conf  sysctl.dump
doxygen/: 00manual.dox  10intro.dox  20setup.dox  30compile.dox  40running.dox  50api.dox  60troubleshooting.dox  70guidelines.dox  80contact.dox  90license.dox  Anouncement  Cheader.tex  DoxygenLayout.xml  NCheader.tex  bdmpi.bib  html.doxyfile  latex.doxyfile
doxygen/includes/: bdmprun.help  helloworld.1  helloworld.2
include/: CMakeLists.txt  bdcommon.h  bdipc.h  bdmpi.h  bdmpif.h
libbdmp/: .gitignore  CMakeLists.txt  allgather.c  alltoall.c  api.c  asio.c  barrier.c  bcast.c  bdmpihooks.c  bdmplib.h  comm.c  defs.h  dlmalloc.c  finalize.c  fortran_api.c  gather.c  getcount.c  hooks.c  init.c  ipc.h  klutil.c  klutil.h  macros.h  malloc.c  merge.c  mstate.c  probe.c  proto.h  recv.c  reduce.c  route.c  sbhooks.c  sbmalloc.c  scan.c  scatter.c  send.c  struct.h  test.c  vmm.h  wait.c  (+3 more)
misc/: test.c
misc/spmv/: Makefile  spmv.h  spmv_mpi.c  spmv_util.c
results/bd3/: bd3-np10nr1  bd3-np10nr4  bd3-np40nr10  bd3-np40nr15  bd3-np40nr20  bd3-np80nr10  bd3-np96nr12  bd3-np96nr24  bd3-np96nr4  bd3-np96nr6  bd3.np40  bd3.np80  vmsort.np80
scripts/: CMakeLists.txt  bdmpic++.pl.in  bdmpicc.pl.in
test/: CMakeLists.txt  allgather.c  alltoall.c  bcast.c  commtest.c  gather.c  helloworld.c  lazyread.c  p2p.c  pscan.c  reduce.c  scatter.c  test_MPI_ANY_SOURCE.c
utils/: bdmpi-all.sh  bdmpi.sh  mkdist.sh
